--- a/configs/ARM.BeagleBone.CRAMPS/KOSSEL.ini
+++ b/configs/ARM.BeagleBone.CRAMPS/KOSSEL.ini
@@ -36,7 +36,7 @@ NUM_FANS = 1
 #DISPLAY = tkemc
 #DISPLAY = gscreen
 DISPLAY = axis
-
+#DISPLAY = mkwrapper
 
 # Touchy currently won't work without some hardware buttons/jog-wheel
 #DISPLAY = touchy
@@ -60,8 +60,8 @@ MAX_FEED_OVERRIDE =     1.5
 PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files
 
 # Introductory graphic
-INTRO_GRAPHIC =         machinekit.gif
-INTRO_TIME =            5
+INTRO_GRAPHIC =
+INTRO_TIME =            0
 
 # Increments for the JOG section
 INCREMENTS = 10 1 0.1 0.01
@@ -136,7 +136,7 @@ POSTGUI_HALFILE =       3D.postgui.hal
 
 ARC_BLEND_ENABLE =              1
 ARC_BLEND_FALLBACK_ENABLE =     0
-ARC_BLEND_OPTIMIZATION_DEPTH =  50
+ARC_BLEND_OPTIMIZATION_DEPTH =  100
 ARC_BLEND_GAP_CYCLES =          4
 ARC_BLEND_RAMP_FREQ =           20
 
@@ -148,8 +148,8 @@ DEFAULT_ANGULAR_VELOCITY = 4.50
 LINEAR_UNITS =          mm
 ANGULAR_UNITS =         degree
 CYCLE_TIME =            0.010
-DEFAULT_VELOCITY = 20.00
-MAX_LINEAR_VELOCITY = 500.00
+DEFAULT_VELOCITY = 50.00
+MAX_LINEAR_VELOCITY = 300.00
 
 
 
@@ -180,8 +180,8 @@ STEPGEN_MAX_ACC =    9000.0
 BACKLASH =           0.000
 
 # scale is 200 steps/rev * 5 revs/inch
-SCALE =  -80
-
+#SCALE =  -80
+SCALE =  -160
 
 MIN_LIMIT =             -1.0
 MAX_LIMIT =             400.0
@@ -202,10 +202,18 @@ HOME_SEARCH_VEL =     -25.0
 HOME_LATCH_VEL =      10.0
 
 # these are in nanoseconds
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
+#DIRSETUP   =              200
+#DIRHOLD    =              200
+#STEPLEN    =              1000
+#STEPSPACE  =              1000
+
+# these are in nanoseconds for DRV8825
+DIRSETUP   =              650
+DIRHOLD    =              650
+STEPLEN    =              1900
+STEPSPACE  =              1900
+
+
 
 [AXIS_1]
 
@@ -219,7 +227,8 @@ STEPGEN_MAX_ACC =    9000.0
 BACKLASH =           0.000
 
 # scale is 200 steps/rev * 5 revs/inch
-SCALE =  -80
+#SCALE =  -80
+SCALE =  -160
 
 MIN_LIMIT =             -1.0
 MAX_LIMIT =             400.0
@@ -239,10 +248,16 @@ HOME_SEARCH_VEL =     -25.0
 HOME_LATCH_VEL =      10.0
 
 # these are in nanoseconds
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
+#DIRSETUP   =              200
+#DIRHOLD    =              200
+#STEPLEN    =              1000
+#STEPSPACE  =              1000
+
+# these are in nanoseconds for DRV8825
+DIRSETUP   =              650
+DIRHOLD    =              650
+STEPLEN    =              1900
+STEPSPACE  =              1900
 
 
 [AXIS_2]
@@ -257,7 +272,8 @@ STEPGEN_MAX_ACC =    9000.0
 BACKLASH =           0.000
 
 # scale is 200 steps/rev * 5 revs/inch
-SCALE =  -80
+#SCALE =  -80
+SCALE =  -160
 
 MIN_LIMIT =             -1.0
 # Marlin - M666 L -> H=158.700 but in Machinekit Max_limit is based on carriage arm-eye position
@@ -281,16 +297,16 @@ HOME_SEARCH_VEL =     -25.0
 HOME_LATCH_VEL =      10.0
 
 # these are in nanoseconds for Allegro A4988
-DIRSETUP   =              200
-DIRHOLD    =              200
-STEPLEN    =              1000
-STEPSPACE  =              1000
+#DIRSETUP   =              200
+#DIRHOLD    =              200
+#STEPLEN    =              1000
+#STEPSPACE  =              1000
 
 # these are in nanoseconds for DRV8825
-#DIRSETUP   =              650
-#DIRHOLD    =              650
-#STEPLEN    =              1900
-#STEPSPACE  =              1900
+DIRSETUP   =              650
+DIRHOLD    =              650
+STEPLEN    =              1900
+STEPSPACE  =              1900
 
 
 [AXIS_3]
@@ -343,3 +359,24 @@ CYCLE_TIME =            0.100
 # tool table file
 TOOL_TABLE =            tool.tbl
 
+[EXTRUDER_0]
+PID_PGAIN              = 0.11
+PID_IGAIN              = 0.0001
+PID_DGAIN              = 0.05
+PID_MAXERRORI          = 0.2
+PID_BIAS               = 0.0
+PWM_MAX                = 1.0
+TEMP_RANGE_POS_ERROR   = 1.0
+TEMP_RANGE_NEG_ERROR   = -1.0
+TEMP_RANGE_LOWPASSGAIN = 0.0008
+TEMP_LIMIT_MIN         = 0.0
+TEMP_LIMIT_MAX         = 280.0
+TEMP_STANDBY           = 180.0
+THERMISTOR             = epcos_B57560G104F
+
+RETRACT_LEN            = 1.5
+RETRACT_VEL            = 25.0
+
+FILAMENT_DIA           = 1.75
+
+FAN_BIAS               = 0.2
