custom MCodes; home ale turn off machine eg. after end of printing

--- a/CRAMPS.ini
+++ b/CRAMPS.ini
@@ -91,6 +91,8 @@ PARAMETER_FILE =        pru-stepper.var
 SUBROUTINE_PATH = /usr/share/linuxcnc/ncfiles/remap-subroutines/fdm
 #SUBROUTINE_PATH = subroutines
 
+USER_M_PATH = MCodes
+
 # remapping Machinekit FDM GCodes
 REMAP=G22 modalgroup=1 ngc=g22
 REMAP=G23 modalgroup=1 ngc=g23
@@ -147,6 +149,8 @@ SERVO_PERIOD =          1000000
 # files are executed in the order in which they appear
 
 HALFILE = kossel.py
+
+HALUI=halui
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
