--- a/CRAMPS.ini
+++ b/CRAMPS.ini
@@ -53,7 +53,7 @@ INTRO_GRAPHIC =
 INTRO_TIME =            0
 
 # Increments for the JOG section
-INCREMENTS = 0.01 0.1 1
+INCREMENTS = 10 1 0.1 0.01
 
 OPEN_FILE =
 
@@ -183,7 +183,7 @@ TIME_UNITS =                s
 
 
 [AXIS_0]
-
+# Tower C - X - 0
 # 
 # Step timing is 40 us steplen + 40 us stepspace
 # That gives 80 us step period = 12.5 KHz step freq
@@ -198,10 +198,10 @@ TIME_UNITS =                s
 
 
 TYPE =              LINEAR
-MAX_VELOCITY =       350.0
+MAX_VELOCITY =       300.0
 MAX_ACCELERATION =   3000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_VEL =    300.0
 STEPGEN_MAX_ACC =    9000.0
 
 BACKLASH =           0.000
@@ -232,13 +232,14 @@ DIRHOLD    =              650
 STEPLEN    =              1900
 STEPSPACE  =              1900
 
-[AXIS_1]
+[AXIS_2]
+# Tower B - Z - 2
 
 TYPE =              LINEAR
-MAX_VELOCITY =       350.0
+MAX_VELOCITY =       300.0
 MAX_ACCELERATION =   3000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_VEL =    300.0
 STEPGEN_MAX_ACC =    9000.0
 
 BACKLASH =           0.000
@@ -271,13 +272,14 @@ STEPLEN    =              1900
 STEPSPACE  =              1900
 
 
-[AXIS_2]
+[AXIS_1]
+# Tower A - X - 1
 
 TYPE =              LINEAR
-MAX_VELOCITY =      350.0
+MAX_VELOCITY =      300.0
 MAX_ACCELERATION =  3000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480
+STEPGEN_MAX_VEL =    300
 STEPGEN_MAX_ACC =    9000
 
 BACKLASH =           0.000
@@ -350,6 +352,7 @@ SCALE = -148.50
 
 HOME_LATCH_VEL =        10.0
 
+INCREMENTS = 10 1 0.1 0.01
 
 # these are in nanoseconds for DRV8825
 DIRSETUP   =              650
