--- a/CRAMPS.ini
+++ b/CRAMPS.ini
@@ -28,7 +28,7 @@ CF_ROD = 234.60
 DISPLAY = mkwrapper
 
 # Cycle time, in seconds, that display will sleep between polls
-CYCLE_TIME =            0.100
+CYCLE_TIME =            0.200
 
 # Path to help file
 HELP_FILE =             tklinucnc.txt
@@ -53,7 +53,7 @@ INTRO_GRAPHIC =
 INTRO_TIME =            0
 
 # Increments for the JOG section
-INCREMENTS = 10 1 0.1 0.01
+INCREMENTS = 50 3 1
 
 OPEN_FILE =
 
@@ -163,7 +163,7 @@ HALUI=halui
 
 ARC_BLEND_ENABLE = 1
 ARC_BLEND_FALLBACK_ENABLE = 0
-ARC_BLEND_OPTIMIZATION_DEPTH = 70
+ARC_BLEND_OPTIMIZATION_DEPTH = 50
 ARC_BLEND_GAP_CYCLES = 4
 ARC_BLEND_RAMP_FREQ = 20
 
@@ -175,9 +175,11 @@ LINEAR_UNITS =              mm
 ANGULAR_UNITS =             degree
 CYCLE_TIME =                0.010
 DEFAULT_LINEAR_VELOCITY =   20.0
-MAX_LINEAR_VELOCITY =       250.00
+MAX_LINEAR_VELOCITY =       300.00
+#250
 DEFAULT_VELOCITY =          20.00
-MAX_VELOCITY =              250.0
+MAX_VELOCITY =              300.0
+#250
 TIME_UNITS =                s
 #NO_FORCE_HOMING = 1
 
@@ -198,7 +200,7 @@ TIME_UNITS =                s
 
 
 TYPE =              LINEAR
-MAX_VELOCITY =       300.0
+MAX_VELOCITY =       350.0
 MAX_ACCELERATION =   3000.0
 # Set Stepgen max 20% higher than the axis
 STEPGEN_MAX_VEL =    300.0
@@ -236,7 +238,7 @@ STEPSPACE  =              1900
 # Tower B - Z - 2
 
 TYPE =              LINEAR
-MAX_VELOCITY =       300.0
+MAX_VELOCITY =       350.0
 MAX_ACCELERATION =   3000.0
 # Set Stepgen max 20% higher than the axis
 STEPGEN_MAX_VEL =    300.0
@@ -276,7 +278,7 @@ STEPSPACE  =              1900
 # Tower A - X - 1
 
 TYPE =              LINEAR
-MAX_VELOCITY =      300.0
+MAX_VELOCITY =      350.0
 MAX_ACCELERATION =  3000.0
 # Set Stepgen max 20% higher than the axis
 STEPGEN_MAX_VEL =    300
