--- a/CRAMPS_AXSIS.ini
+++ b/CRAMPS_AXSIS.ini
@@ -21,7 +21,7 @@ CF_ROD = 360.22
 [DISPLAY]
 
 # Name of display program, e.g., tkemc
-DISPLAY = mkwrapper
+DISPLAY = axis
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.200
@@ -55,6 +55,7 @@ OPEN_FILE =
 
 MIN_VELOCITY = 1.0
 
+PYVCP = 3D.Temps.panel.xml
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
@@ -146,13 +147,13 @@ SERVO_PERIOD =          1000000
 
 HALFILE = kossel.py
 
-HALUI=halui
+#HALUI=halui
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
 #HALCMD =               save neta
 
-#POSTGUI_HALFILE =       TCT3D.postgui.hal
+POSTGUI_HALFILE =       3D.postgui.hal
 
 
 [TRAJ]
